--- a/car-sales-platform/package.json
+++ b/car-sales-platform/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^1.2.4-ngx12.0",
     "@angular/animations": "^17.2.0",
     "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.2.0",
@@ -23,6 +24,7 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
+    "angular-oauth2-oidc": "^17.0.2",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
